# latent_beam_dynamics

./: .gitignore  CLAUDE.md  MODEL_DESIGN.md  README.md  config.yaml  environment.yaml  main.py  model.py  pyproject.toml
configs/: default.yaml
configs/data/: default.yaml
configs/model/: default.yaml
configs/training/: default.yaml
scripts/: train.py
slurm/: submit_single.sh  sync_wandb.sh
src/: __init__.py
src/data/: __init__.py  dataset.py
src/training/: losses.py  trainer.py
src/utils/: __init__.py  config.py  logging.py  validation.py  wandb_init.py
