[project]
name = "latent-beam-dynamics"
version = "0.1.0"
description = "Latent-space causal transformer for accelerator beam dynamics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "numpy",
    "pyyaml",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
