[project]
name = "latent-beam-dynamics"
version = "0.1.0"
description = "Latent-space causal transformer for accelerator beam dynamics"
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
